--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Functions</title>
-    <link rel="stylesheet" href="../lib/mocha/mocha.css">
+    <link rel="stylesheet" href="lib/mocha/mocha.css">
 </head>
 <body>
     <div id="mocha"></div>
